--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,12 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
-    "mongoose": "^5.0.14"
+    "mongoose": "^5.0.14",
+    "multer": "^1.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "morgan": "^1.9.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
