--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "Business Card Generator Hacktiv8 Phase2 project 2",
   "main": "index.js",
   "dependencies": {
+    "@google-cloud/storage": "^1.6.0",
     "bcrypt": "^2.0.0",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
@@ -16,7 +17,7 @@
     "morgan": "^1.9.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
